fix-rule white space

--- a/src/app/components/room/EnterTheRoom/EnterTheRoom.scss
+++ b/src/app/components/room/EnterTheRoom/EnterTheRoom.scss
@@ -37,7 +37,7 @@
     }
     &__rule {
         font: $font-400_regular;
-        white-space: inherit;
+        white-space: pre-wrap;
     }
     &__title {
         width: 100%;
